<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventViewModel"
            type="be.hogent.faith.faith.emotionCapture.enterEventDetails.EventViewModel" />

        <variable
            name="userViewModel"
            type="be.hogent.faith.faith.UserViewModel" />

    </data>
    <!-- TODO: toevoegen van captions Titel en notities -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--ACHTERGROND-->

        <!-- KNOPPEN -->
        <!-- Invisible to make it transparent -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_save_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_save_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.88" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_save_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_save_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.21" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_save_painter_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.22" />

            <ImageButton
                android:id="@+id/btn_save_event_cancel"
                android:layout_width="@dimen/material_icon_width"
                android:layout_height="@dimen/material_icon_height"
                android:layout_marginStart="@dimen/margin_corner_button"
                android:layout_marginTop="@dimen/margin_corner_button"
                android:background="@drawable/ic_return"
                android:contentDescription="@string/cancel"
                android:onClick="@{() -> eventViewModel.onCancelButtonClicked()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/save_event_schilder"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/schilder"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guide_save_painter_end"
                app:layout_constraintTop_toBottomOf="@+id/btn_save_event_cancel"
                app:srcCompat="@drawable/schilder" />

            <androidx.cardview.widget.CardView
                android:id="@+id/save_event_cardview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardBackgroundColor="@color/background_save_event"
                app:cardCornerRadius="60dp"
                app:cardElevation="@dimen/panel_elevation"
                app:layout_constraintBottom_toTopOf="@+id/guide_save_bottom"
                app:layout_constraintEnd_toStartOf="@+id/guide_save_end"
                app:layout_constraintStart_toEndOf="@+id/guide_save_start"
                app:layout_constraintTop_toBottomOf="@+id/guide_save_top">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save_event_btn_date"
                        style="@style/faith_calendar_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/event_textInput_height"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="64dp"
                        android:contentDescription="@string/save"
                        android:elevation="0dp"
                        android:fontFamily="@font/sourcesanspro"
                        android:onClick="@{() -> eventViewModel.onDateButtonClicked()}"
                        android:text="@{eventViewModel.eventDateString}"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textColor="@color/black"
                        app:icon="@drawable/ic_kalender"
                        app:iconGravity="textStart"
                        app:iconPadding="5dp"
                        app:iconSize="44dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/save_event_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/je_werkje_opslaan"
                        android:textColor="@color/caption"
                        android:textSize="45sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintTop_toBottomOf="@+id/save_event_btn_date" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout_eventtitle"
                        style="@style/faith_textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginEnd="48dp"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/save_event_title"
                        app:errorEnabled="true"
                        app:errorResId='@{userViewModel.titleErrorMessage}'
                        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_notes"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/save_event_title"
                        app:layout_constraintVertical_weight="1"
                        app:startIconDrawable="@drawable/ic_titel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_save_event_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:nextFocusDown="@+id/txt_save_event_notes"
                            android:text="@={eventViewModel.eventTitle}">

                            <requestFocus />
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout_notes"
                        style="@style/faith_textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:hint="@string/hier_kan_je_de_notities_kwijt"
                        app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_eventtitle"
                        app:startIconDrawable="@drawable/ic_notities">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_save_event_notes"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="top|start"
                            android:inputType="textMultiLine"
                            android:nextFocusDown="@+id/btn_save_event_save"
                            android:singleLine="false"
                            android:text="@={eventViewModel.eventNotes}"
                            tools:text="@tools:sample/lorem/random" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save_event_save"
                        style="@style/faith_button"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/save_btn"
                        android:contentDescription="@string/save"
                        android:onClick="@{() -> userViewModel.saveEvent(eventViewModel.event)}"
                        android:text="@string/save"
                        app:cornerRadius="40dp"
                        app:icon="@drawable/save_btn"
                        app:iconGravity="textStart"
                        app:iconPadding="5dp"
                        app:iconSize="44dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_notes" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <include
                android:id="@+id/loading_spinner_event_save"
                layout="@layout/loading_spinner"
                bind:viewModel="@{userViewModel}" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</layout>
