...
                app:layout_constraintStart_toStartOf="@+id/guide_recyclerview_start"
                app:layout_constraintTop_toBottomOf="@+id/guide_recyclerview_top"
                app:layout_constraintVertical_bias="1.0"
                tools:listitem="@layout/item_event_detail_thumbnail" />

            <ImageButton
                android:id="@+id/btn_event_send"
                android:layout_width="@dimen/material_icon_width"
                android:layout_height="@dimen/material_icon_height"
                android:layout_marginTop="@dimen/margin_corner_button"
                android:layout_marginEnd="@dimen/margin_corner_button"
                android:background="@drawable/save_btn"
                android:visibility="@{eventViewModel.eventDetails.size() > 0 ? View.VISIBLE : View.GONE}"
...
