...
    <string name="save_film_error">Er ging iets fout bij het opslaan van je film.</string>
    <string name="encode_film_error">Er ging iets fout bij het aanmaken van je film.</string>
    <string name="save_film_success">Je film werd opgeslagen</string>
    <string name="save_audio_success">Je opname werd opgeslagen</string>
    <string name="save_drawing_success">Je tekening werd opgeslagen</string>
    <string name="save_photo_success">Je foto werd opgeslagen</string>
    <string name="save_event_success">Je gebeurtenis werd opgeslagen</string>
    <string name="error_load_events">Er ging iets fout bij het laden van je gebeurtenissen.</string>
    <string name="save_text_success">Je tekst werd opgeslagen</string>
    <string name="error_save_film_failed">Er ging iets fout bij het opslaan van je film</string>
    <string name="error_save_audio_failed">Er ging iets fout bij het opslaan van je opname</string>
    <string name="error_save_event_failed">Er ging iets fout bij het opslaan van je gebeurtenis</string>
    <string name="error_save_avatar_failed">Er ging iets fout bij het opslaan van je avatar</string>
...
    <string name="dialog_to_the_city_message">Ben je zeker? Je gebeurtenis is nog niet opgeslagen!</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="txt_error_userNameOrAvatarNotSet">Vul je naam in en selecteer een avatar</string>
    <string name="error_save_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
    <string name="error_register_user_failed">Het opslaan van de nieuwe gebruiker is gefaald.</string>
    <string name="error_event_no_title">Je moet een titel geven aan je werkje.</string>
    <string name="lbl_save_event_notes">Notities</string>
    <string name="lbl_save_event_date">Dag</string>
    <string name="lbl_save_event_title">Titel</string>
    <string name="lbl_back">Terug</string>
    <string name="lbl_activity_emotionCapture">Emotiecaptatie</string>
    <string name="lbl_activity_treasurechest">Schatkist</string>
...
